bambu-macro/rust_hls_macro/tests/fails_on_multiple_hls_function.stderr
error: Multiple hls functions
  --> tests/fails_on_multiple_hls_function.rs:12:23
   |
12 |     pub extern "C" fn adderTwo(a: u32, b: u32) -> u32 {
   |                       ^^^^^^^^
